--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
-    <tit
-    <title>Hello World!</title>
-
+    <title>Histoire-Navale.com</title>
     <!-- The website stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
@@ -14,7 +12,7 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-   <h1></h1>
+   <h1>Histoire-Navales.com</h1>
     
   </body>
 </html>
