--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
+    <link rel="icon" href="https://glitch.com/favicon.ico" /> 
     <title>Histoire-Navale.com</title>
     <!-- The website stylesheet -->
     <link rel="stylesheet" href="/style.css" />
@@ -13,6 +13,6 @@
   </head>
   <body>
    <h1>Histoire-Navales.com</h1>
-    
+    <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic1.jpg?v=1738138549252"></a>
   </body>
 </html>
