--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
   </head>
+  <header>
+    <h1>Histoire-Navales.com</h1>
+  </header>
   <body>
-   <h1>Histoire-Navales.com</h1>
-    <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic1.jpg?v=1738138549252"></a>
+    <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic1.jpg?v=1738138549252"/></a>
+      <h5 class="t1">
+      pour en savoir plus sur le Titanic cliquer sur cette image
+      </h5>
+      
   </body>
 </html>
