✍️💖 Checkpoint ./index.html:74308084/610 ./.glitch-assets:74308084/793

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
     <h1>Histoire-Navales.com</h1>
   </header>
   <body>
-    <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic1.jpg?v=1738138549252"/></a>
-      <h5 class="t1">
-      pour en savoir plus sur le Titanic cliquer sur cette image
-      </h5>
+    <table>
+      <tr>
+        <th><a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic1.jpg?v=1738138549252"/></a></th>
+        <th><a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic2.jpg?v=1738141196792"/></a></th>
+      </tr>
+      <tr>
+        <th class="t1 ">
+        pour en savoir plus sur le Titanic cliquer sur cette image
+        </th>
+      </tr>
+    </table>
       
   </body>
 </html>
