--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" /> 
-    <title>Le-RMS-Titanic.com</title>
+    <title>Le RMS Titanic.com</title>
     <!-- The website stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
@@ -17,8 +17,8 @@
   <body>
     <table>
       <tr>
-        <th><a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic1.jpg?v=1738138549252"/></a></th>
-        <th><a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic2.jpg?v=1738141196792"/></a></th>
+        <th><a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic1.jpg?v=1738138549252" width=200/></a></th>
+        <th><a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic2.jpg?v=1738141196792" width=200/></a></th>
       </tr>
       <tr>
         <th class="t1 ">
