🐌👍 Checkpoint ./style.css:74308084/416 ./index.html:74308084/504

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
   <header>
     <h1>Histoire-Navales.com</h1>
+    <h3>
+      Bienvenue sur le site Histoire Navales sur cette sur cette section du site nous vous présenterons le RMS titanic et les tristement célébre histoire qui l'entourent
+    </h3>
   </header>
   <body>
     <div class="resume-container">
@@ -21,7 +24,7 @@
             <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic2.jpg?v=1738141196792" alt="tit2"/></a>
         </div>
       <th class="t1 ">
-        pour en savoir plus sur le Titanic cliquer sur cette image
+        Pour plus découvrir la passionante histoire du Titanic cliquez sur ces images
         </th>
     </div>
     
