--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
   <body>
     <div class="resume-container">
         <div class="image-section">
-            <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic1.jpg?v=1738138549252" alt="tit1"/></a>
+          <button class="image-button">
+          
+          </button>
+            <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic1.jpg?v=1738138549252" alt="tit1" class="image1"/></a>
             <br/>
-            <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic2.jpg?v=1738141196792" alt="tit2"/></a>
+            <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic2.jpg?v=1738141196792" alt="tit2" class="image2"/></a>
         </div>
       <div class="resume-container2">
          <th>
