👰😻 Checkpoint ./style.css:74308084/854 ./index.html:74308084/1371 ./.glitch-assets:74308084/402

--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
   <body>
     <div class="resume-container">
         <div class="image-section">
-          <button class="image-button">
-          
-          </button>
-            <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic1.jpg?v=1738138549252" alt="tit1" class="image1"/></a>
+            <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/f29er32ls6ia1.webp?v=1738581241195" alt="tit1" class="image1"/></a>
             <br/>
             <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic2.jpg?v=1738141196792" alt="tit2" class="image2"/></a>
         </div>
