⏱📇 Checkpoint ./titanic.html:74308084/509 ./index.html:74308084/23

--- a/titanic.html
+++ b/titanic.html
@@ -1,5 +1,16 @@
 <<!DOCTYPE html>
 <html lang="en">
   <head>
-    
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="https://glitch.com/HistoiresNavales/Titanic.ico" /> 
+    <title>Le RMS Titanic.com</title>
+    <link rel="stylesheet" href="/style.css" />
+
+    <!-- The website JavaScript file -->
+    <script src="/script.js" defer></script>
   </head>
+  <header>
+  <a href
+  </header>
+</html>
