--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" /> 
+    <link rel="icon" href="https://glitch.com/HistoiresNavales.ico" /> 
     <title>Le RMS Titanic.com</title>
     <!-- The website stylesheet -->
     <link rel="stylesheet" href="/style.css" />
