🎍🐊 Checkpoint ./titanic.html:74308084/269 ./Titan.html:74308084/782

--- a/titanic.html
+++ b/titanic.html
@@ -11,6 +11,9 @@
     <script src="/script.js" defer></script>
   </head>
   <header>
-  <a href
+    <a href="index.html"/>Page d'accueil</a>
   </header>
+  <body>
+    
+  </body>
 </html>
