--- a/index.html
+++ b/index.html
@@ -25,18 +25,26 @@
             <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic2.jpg?v=1738141196792" alt="tit2" class="image2"/></a>
         </div>
       <div class="resume-container2">
-         <p class="titre">
+        <p class="texte1">
+          edfd
+        </p>
+        <p class="twt1">
         Pour plus découvrir la passionante histoire du Titanic cliquez sur ces images
         </p>
       </div>
     </div>
+    
+    
     <div class="resume-container3">
       <div class="image-section2">
         <a href="Titan.html"><Image src="" alt="titan1" class="image3"</a>
           <br/>
         <a href="Titan.html"><Image src="" alt="titan2" class="image4"</a>
       </div>
-          <p class="titre">
+          <p class="texte1">
+            EDFVbf
+          </p>
+          <p class="twt1">
             Pour plus découvrir sur l'histoire du Titan cliquez sur ces images
           </p>
     </div>
