🐢🎻 Checkpoint ./style.css:74308084/735 ./.glitch-assets:74308084/1148 ./index.html:74308084/190

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     
     <div class="resume-container3">
       <div class="image-section2">
-        <a href="Titan.html"><Image src="" alt="titan1" class="image3"</a>
+        <a href="Titan.html"><Image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/t%C3%A9l%C3%A9charger.jpg?v=1738692329732" alt="titan1" class="image3"</a>
           <br/>
-        <a href="Titan.html"><Image src="" alt="titan2" class="image4"</a>
+        <a href="Titan.html"><Image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/OIP.jpg?v=1738692335880" alt="titan2" class="image4"</a>
       </div>
           <p class="texte1">
             EDFVbf
