🚿🐦 Checkpoint ./index.html:74308084/89 ./style.css:74308084/619 ./.glitch-assets:74308084/440

--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
           <br/>
         <a href="Titan.html"><Image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/OIP.jpg?v=1738692335880" alt="titan2" class="image4"</a>
       </div>
+      <div class="resume-container4">
           <p class="texte1">
             EDFVbf
           </p>
           <p class="twt1">
             Pour plus découvrir sur l'histoire du Titan cliquez sur ces images
           </p>
+      </div>
     </div>
 
       
