🏋💝 Checkpoint ./titanic.css:74308084/128 ./titanic.html:74308084/41 ./Titan.html:74308084/13

--- a/Titan.html
+++ b/Titan.html
@@ -10,7 +10,7 @@
     <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
   </head>
-  <header>
+  <header class="menu">
     <a href="index.html">Page d'accueil</a>
   </header>
   <body>
