--- a/titanic.html
+++ b/titanic.html
@@ -12,6 +12,10 @@
   </head>
   <header class="menu">
     <a href="index.html"/>Page d'accueil</a>
+  
+    <div class="resume-containerT1">
+    
+    </div>
   </header>
   <body>
     
