🕋🎐 Checkpoint ./titanic.css:74308084/68 ./titanic.html:74308084/24

--- a/titanic.html
+++ b/titanic.html
@@ -11,10 +11,10 @@
     <script src="/script.js" defer></script>
   </head>
   <header class="menu">
-    <a href="index.html"/>Page d'accueil</a>
+    <a href="index.html">Page d'accueil</a>
   
     <div class="resume-containerT1">
-    
+    sdfgfghjh
     </div>
   </header>
   <body>
