🐛🌺 Checkpoint ./titanic.html:74308084/135 ./titanic.css:74308084/442 ./Titan.html:74308084/10

--- a/Titan.html
+++ b/Titan.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/HistoiresNavales/Titan.ico" /> 
     <title>Le RMS Titanic.com</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/Titan.css" />
 
     <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
