--- a/titanic.html
+++ b/titanic.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/HistoiresNavales/Titanic.ico" /> 
     <title>Le RMS Titanic.com</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/titanic.css" />
 
     <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
   </head>
   <header class="menu">
     <a href="index.html">Page d'accueil</a>
-  
     <div class="resume-containerT1">
-    sdfgfghjh
+      <div class="resume-containerT2">
+        c
+      </div>
     </div>
   </header>
   <body>
