🐘🤗 Checkpoint ./Titan.css:74308084/16 ./index.html:74308084/70 ./Titan.html:74308084/18 ./style.css:74308084/266

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/HistoiresNavales.ico" /> 
-    <title>Le RMS Titanic.com</title>
+    <title>Histoires Navales.com</title>
     <!-- The website stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
@@ -12,7 +12,7 @@
     <script src="/script.js" defer></script>
   </head>
   <header>
-    <h1>Histoire-Navales.com</h1>
+    <h1 id="titre">Histoire-Navales.com</h1>
     <h3>
       Bienvenue sur le site Histoire Navales sur cette sur cette section du site nous vous présenterons le RMS titanic et les tristement célébre histoire qui l'entourent
     </h3>
@@ -84,6 +84,6 @@
       </div>
     </div>
 
-      
+      <a href="#titre">début</a>
   </body>
 </html>
