--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     
   </header>
   <body>
+    <a class="intro">Gay</a>
     <div class="resume-container">
         <div class="image-section">
             <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/f29er32ls6ia1.webp?v=1738581241195" alt="tit1" class="image1"/></a>
