🌪🍃 Checkpoint ./index.html:74308084/549 ./style.css:74308084/75

--- a/index.html
+++ b/index.html
@@ -95,13 +95,38 @@
           </p>
       </div>
     </div>
-     <a class="txt2">
-    
+    <a class="txt2">
+      sddsf
     </a>
-      <a href="#titre">début</a>
+    <br/>
+    <a href="#titre">début</a>
     <br>
     <a id="credit" class="titre">
       Crédit
+    </a>
+    <br/>
+    <a class="credit">
+    Page d'accueil crée par :
+      <br/>
+      Nicola Pinto Ramos
+      <br/>
+      Page sur le Titanic par :
+      <br/>
+      Adrien Rognier
+      <br/>
+      Page sur le Titan par:
+      <br/>
+      Jacques De Lapisse
+    </a>
+    <br/>
+    <a class="titre">
+      Sources :
+    </a>
+    <br/>
+    <a class="credit">
+      Wikipedia :...
+      <br/>
+      .. : ...
     </a>
   </body>
 </html>
