📮⛹ Checkpoint ./index.html:74308084/162 ./style.css:74308084/93

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <script src="/script.js" defer></script>
   </head>
   <header>
+    <button onclick="toggleMusic()">🎵 Play / Pause</button>
+<audio id="background-music" loop>
+    <source src="musique.mp3" type="audio/mpeg">
+</audio>
     <h1 id="titre">Histoire-Navales.com</h1>
     <h3>
       Bienvenue sur le site Histoire Navales sur cette sur cette section du site nous vous présenterons le RMS titanic et les tristement célébre histoire qui l'entourent
