--- a/Titan.html
+++ b/Titan.html
@@ -7,11 +7,12 @@
   <link rel="stylesheet" href="Titan.css">
   <title>Titre de la page</title>
 </head>
-<header>
-</header>
 <body>
   <div class="container">
         <div class="header">
+          <div class="home">
+          <a style="color:white" href="index.html">Accueil</a>
+        </div>
           <div class="upper">
             <div class="titre">Le Titan</div>
           </div>
