--- a/titanic.html
+++ b/titanic.html
@@ -9,6 +9,9 @@
   <body>
     <div class="container">
       <div class="header">
+        <div class="home">
+          <a href="index.html">Accueil</a>
+        </div>
         <div class="upper">
           <div class="titre">Le Titanic</div>
         </div>
