🌦🍍 Checkpoint ./index.html:74308084/19 ./titanic.html:74308084/54 ./Titan.html:74308084/24

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/HistoiresNavales.ico" /> 
-    <title>Histoires Navales.com</title>
+    <title>Histoires Navales/Titanic.com</title>
     <!-- The website stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
@@ -69,7 +69,7 @@
   </header>
   <body>
     <a class="intro">
-      Gay
+      Gedf,ekd
     </a>
     <br/>
     <a id="Titanic" class="titre">
