--- a/titanic.html
+++ b/titanic.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="titanic.css">
+    <title>Le RMS Titanic</title>
   </head>
   <body>
     <div class="container">
