🐪🚙 Checkpoint ./index.html:74308084/186

--- a/index.html
+++ b/index.html
@@ -123,15 +123,11 @@
     </a>
     <br/>
     <a class="credit">
-    Page d'accueil crée par :
+    <u>Site crée par :</u>
       <br/>
       Nicola Pinto Ramos
       <br/>
-      Page sur le Titanic par :
-      <br/>
       Adrien Rognier
-      <br/>
-      Page sur le Titan par:
       <br/>
       Jacques De Lapisse
     </a>
