⚽️📫 Checkpoint ./style.css:74308084/9863 ./page-accueil-site.css:74308084/2529 ./Page-Acceuil-site.html:74308084/7665 ./index.html:74308084/7579 ./Titan.html:74308084/28 ./titanic.html:74308084/28

--- a/Page-Acceuil-site.html
+++ b/Page-Acceuil-site.html
@@ -1,22 +1,25 @@
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="page-accueil-site.css">
-  <title>Histoires Navales.com</title>
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="https://glitch.com/HistoiresNavales.ico" /> 
+    <title>Histoires Navales/Titanic.com</title>
+    <!-- The website stylesheet -->
+    <link rel="stylesheet" href="page-accueil-site.css" />
 
+    <!-- The website JavaScript file -->
+    <script src="/script.js" defer></script>
+  </head>
   <header>
     <button onclick="toggleMusic()">🎵Lancer/stopper la musique</button>
 <audio id="background-music" loop>
     <source src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Jean.m4a?v=1739307633184" type="audio/mpeg">
-</audio>
-    
+    </audio></br>
+    <a style="color:white" href="Page-Acceuil-site.html">Accueil</a>
     <h1 id="titre">Histoire-Navales.com</h1>
     <h3>
-      Bienvenue sur Histoire Navales, sur ce site nous parlons de differentes histoires dans le monde du naval
+      Bienvenue sur le site Histoire Navales sur cette sur cette section du site nous vous présenterons le RMS titanic et les tristement célébre histoire qui l'entourent
     </h3>
     
     <div class="rechercheP1">
@@ -136,4 +139,4 @@
       .. : ...
     </a>
   </body>
-</html>  
+</html>
