--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/HistoiresNavales.ico" /> 
-    <title>Histoires Navales/Titanic.com</title>
-    <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Histoires Navales.com</title>
+</head>
 
-    <!-- The website JavaScript file -->
-    <script src="/script.js" defer></script>
-  </head>
   <header>
     <button onclick="toggleMusic()">🎵Lancer/stopper la musique</button>
 <audio id="background-music" loop>
@@ -19,7 +16,7 @@
     
     <h1 id="titre">Histoire-Navales.com</h1>
     <h3>
-      Bienvenue sur le site Histoire Navales sur cette sur cette section du site nous vous présenterons le RMS titanic et les tristement célébre histoire qui l'entourent
+      Bienvenue sur Histoire Navales, sur ce site nous parlons de differentes histoires dans le monde du naval
     </h3>
     
     <div class="rechercheP1">
@@ -139,4 +136,4 @@
       .. : ...
     </a>
   </body>
-</html>
+</html>  
