--- a/Titan.html
+++ b/Titan.html
@@ -11,7 +11,7 @@
   <div class="container">
         <div class="header">
           <div class="home">
-          <a style="color:white" href="index.html">Accueil</a>
+          <a style="color:white" href="Page-Acceuil-site.html">Accueil</a>
         </div>
           <div class="upper">
             <div class="titre">Le Titan</div>
