--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <h3>
       Bienvenue sur Histoire Navales, sur ce site nous parlons de differentes histoires dans le monde du naval
     </h3>
-    
+    <br/>
+    <br/>
     <div class="rechercheP1">
       <a href="#Titanic">
          <div class="rechercheP2">
@@ -65,6 +66,8 @@
     
   </header>
   <body>
-   
+    <a class="texte1">
+    Bienvenue sur la page d'acceuil de notre site <a class="truc1">Histoire-Navales.com</a> ici vous pouvez découvrir les différent histoires maritimes et les pages pour en découvrir plus
+    </a>
   </body>
 </html>  
