🏎🚉 Checkpoint ./.glitch-assets:74872078/1222 ./tit1.html:74308084/9:74872078/206 ./tit1.css:74872078/94 ./Page-Acceuil-site.html:74308084/56

--- a/tit1.html
+++ b/tit1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="tit1.css">
   <title>Histoire navale</title>
 </head>
   <center><h1><u><div class='lien'><big>L'Histoire de l'Insubmersible</big></u></h1>
@@ -34,7 +34,7 @@
 </body>
   <br /><h2><div class='lien'><u>II)  La construction</h2></u><br />
   <tr>
-		<td>   <img src="titagif.gif"
+		<td>   <img src="https://cdn.glitch.me/f5ce6009-1228-4be5-94bb-b3777fc53977/titagif.gif?v=1740505188899"
        width=640/> </td>
 </tr>
   <tr>	
@@ -60,7 +60,7 @@ Dans l'après-midi du 13 avril, un incendie est éteint dans la salle des chaudi
 <center>La White Star Line accorde un grand soin à la sécurité du paquebot lors de sa construction. C’est pourquoi elle insiste sur une coque à double fond, dotée de 16 compartiments étanches. La fermeture des portes étanches s’effectue depuis la passerelle par commande électrique. Le navire peut ainsi continuer à flotter avec 2 compartiments principaux envahis.</FONT> </center><br />
       </p>
    <h2><u>III)  Le naufrage<div class='lien'><FONT face="Courier"> </u></h2>
-  <center><img src="tivideonaufra.gif"
+  <center><img src="https://cdn.glitch.me/f5ce6009-1228-4be5-94bb-b3777fc53977/tivideonaufra.gif?v=1740504912894"
        width=500/></center><br />
 <body>
   Cela ne fait que trois jours que le Titanic a pris la mer pour son voyage inaugural, au départ de Southampton, dans le sud de l’Angleterre. Pour son capitaine Edward J. Smith, c’est un dimanche comme les autres. Il inspecte le navire mais refuse de mener un exercice d’évacuation pourtant à l’ordre du jour. Il préside à un service religieux puis s’entretient avec ses officiers pour rectifier la position du paquebot. D’après leurs calculs, le Titanic avance à une vitesse moyenne de 22 nœuds. Au coucher du Soleil, le 14 avril 1912, la température devient négative. La surface de l’océan brille comme du verre, les icebergs, fréquents au printemps dans l’Atlantique Nord, sont difficiles à repérer.
