🌇💍 Checkpoint ./.glitch-assets:74308084/43:74872078/1519 ./tit1.html:74872078/301 ./index.html:74308084/27

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         </div>
       </a>
       
-      <a href="#credit">
+      <a href="tit1.html">
          <div class="rechercheP2">
-        Crédits
+        Tit1
         </div>
       </a>
        
