--- a/tit1.html
+++ b/tit1.html
@@ -14,9 +14,9 @@
    <table>
      
 <tr>
-		<td>   <img src="ismay.jpeg"
+		<td>   <img src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/ismay.jpeg?v=1740505641359"
        width=300/> </td>
-		<td> <img src="morgan.jpg"
+		<td> <img src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/morgan.jpg?v=1740505681733"
        width=300/> </td>
 	
 </tr>
@@ -38,7 +38,7 @@
        width=640/> </td>
 </tr>
   <tr>	
-    <td> <img src="TI.jpg"
+    <td> <img src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/TI.jpg?v=1740505769803"
        width=510/> </td>
   </tr><br />
 <p><center><div class='lien'><FONT face="Courier"> 
