--- a/tit1.html
+++ b/tit1.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="tit1.css">
   <title>Histoire navale</title>
 </head>
+<header>
   <center><h1><u><div class='lien'><big>L'Histoire de l'Insubmersible</big></u></h1>
+</header>
+<body>
   </center><div class='lien'></div><br />
   <h2><u><div class='lien'>I)  Le projet</u></h2>
  <center>
@@ -28,10 +31,9 @@
     </center>
 <br />  
 <br />
-<body><center><div class='lien'><FONT face="Courier"> 
+<center><div class='lien'><FONT face="Courier"> 
  Durant l'année 1907, pour concurrencer le Lusitania et le Mauretania, deux rapides paquebots de la Cunard Line, Lord William James Pirrie, associé de la société du chantier naval Harland and Wolff à Belfast, et Joseph Bruce Ismay, directeur général de la compagnie maritime White Star Line, prennent la décision de construire une série de trois paquebots capables de surpasser en confort, sécurité et élégance les autres compagnies. Leurs noms, Olympic, Titanic et le Britannique. Ce projet est financé par le millionnaire américain J.P. Morgan. Le Titanic a coûté 1,5 million de livres soit 7,5 millions de dollars américains à l'époque.</FONT></center> 
   
-</body>
   <br /><h2><div class='lien'><u>II)  La construction</h2></u><br />
   <tr>
 		<td>   <img src="https://cdn.glitch.me/f5ce6009-1228-4be5-94bb-b3777fc53977/titagif.gif?v=1740505188899"
@@ -62,7 +64,7 @@ Dans l'après-midi du 13 avril, un incendie est éteint dans la salle des chaudi
    <h2><u>III)  Le naufrage<div class='lien'><FONT face="Courier"> </u></h2>
   <center><img src="https://cdn.glitch.me/f5ce6009-1228-4be5-94bb-b3777fc53977/tivideonaufra.gif?v=1740504912894"
        width=500/></center><br />
-<body>
+
   Cela ne fait que trois jours que le Titanic a pris la mer pour son voyage inaugural, au départ de Southampton, dans le sud de l’Angleterre. Pour son capitaine Edward J. Smith, c’est un dimanche comme les autres. Il inspecte le navire mais refuse de mener un exercice d’évacuation pourtant à l’ordre du jour. Il préside à un service religieux puis s’entretient avec ses officiers pour rectifier la position du paquebot. D’après leurs calculs, le Titanic avance à une vitesse moyenne de 22 nœuds. Au coucher du Soleil, le 14 avril 1912, la température devient négative. La surface de l’océan brille comme du verre, les icebergs, fréquents au printemps dans l’Atlantique Nord, sont difficiles à repérer.
 <br />
 Malgré tout, le capitaine Smith maintient le navire à pleine vitesse. Il pense que l’équipage saura réagir à temps s’il en apparaît un.
@@ -96,7 +98,7 @@ L’eau continue d’inonder le paquebot. Environ deux heures et quarante minute
   Le 15 avril 1912, à 2h20, le Titanic est englouti dans les eaux glacées de l’Atlantique. Tous ceux qui n’ont pas réussi à gagner un canot de sauvetage sombrent avec le paquebot. Les gilets de sauvetage n’auront servi à rien. Plus de 1 500 personnes (nantis comme ouvriers) se noient ou meurent d’hypothermie.
 <br />
 Pour ceux qui sont montés sur une embarcation, les secours ne tarderont pas à arriver. En sombrant, le Titanic parviendra à contacter le R.M.S. Carpathia qui finira par arriver vers 4 heures du matin pour secourir les quelque 705 survivants du naufrage.
-</body>
+
 <h3>Les victimes</h3>
 <table>
    <table border="1">  
@@ -139,4 +141,5 @@ Pour ceux qui sont montés sur une embarcation, les secours ne tarderont pas à 
 </table> 
   Pour plus de précisions consultez wikipedialien
   plus suite page suivante et precedente
-  </html>
+</body>
+</html>
