🎖🎲 Checkpoint ./Page-Acceuil-site.html:74308084/3200:74872078/5 ./tit1.html:74872078/884 ./page-accueil-site.css:74308084/442 ./.glitch-assets:74872078/1976

--- a/tit1.html
+++ b/tit1.html
@@ -143,3 +143,7 @@ Pour ceux qui sont montés sur une embarcation, les secours ne tarderont pas à 
   plus suite page suivante et precedente
 </body>
 </html>
+LES CLASSES :
+En première classe se trouve la frange supérieure de la société : puissants hommes d'affaires, politiques, militaires et lettrés s'y côtoient. La deuxième classe est accessible à des gens moins riches mais tout de même aisés : universitaires, ecclésiastiques et touristes notamment. Enfin, la troisième classe est destinée aux nombreux immigrants désireux de s'installer définitivement aux États-Unis. 
+La traversée inaugurale du Titanic est un évènement exceptionnel qui pousse nombre de milliardaires à reporter leur retour pour voyager à bord du paquebot. Des grands noms de la finance embarquent ainsi à bord le 10 avril 1912 tel que Benjamin Guggenheim ou George Widener. Parmi eux, nous retrouvons John Jacob Astor, l’homme le plus riche du paquebot qui est hélas décédé pendant le naufrage.
+Le Titanic proposait beaucoup d’activités selon les classes.
