🍝🏵 Checkpoint ./titanic.html:74872078/510

--- a/titanic.html
+++ b/titanic.html
@@ -122,9 +122,7 @@ Le Titanic est lancé le 31mai 1911. Afin que le paquebot ne heurte pas la rive 
 Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandement du Titanic. Le 31 mars, à Belfast, il est relevé par Edward Smith.
 
 <h3>Système de propulsion</h3>
-The RMS Titanic was powered by 29 boilers and propelled by 3 screws driven by steam turbines. The steam turbines were a relatively new technology and allowed the Titanic to reach a maximum speed of 23 knots.
-
-  <center>  Car le cahier des charges est impressionnant. Tenons-nous le pour dit, le Titanic sera un bijou d’innovation et de technologie. <br /> </center>
+Le RMS Titanic était propulsé par 29 chaudières et propulsé par 3 hélices entraînées par des turbines à vapeur. Les turbines à vapeur étaient une technologie relativement nouvelle et permettaient au Titanic d’atteindre une vitesse maximale de 23 nœuds. Car le cahier des charges est impressionnant. Tenons-nous le pour dit, le Titanic sera un bijou d’innovation et de technologie. <br />
 <tr>
 		<td>   <img src="https://cdn.glitch.me/f5ce6009-1228-4be5-94bb-b3777fc53977/titanicvideopropulsion.gif?v=1740521690842"
        width="600"/> </td>
@@ -219,12 +217,12 @@ Dans l'après-midi du 13 avril, un incendie est éteint dans la salle des chaudi
       
       
 </tr>
-</table> 
+</table></center> 
   <p>
     Pour plus de précisions consultez <a href="https://fr.wikipedia.org/wiki/Titanic">wikipedialien</a>
   plus suite page suivante et precedente
   </p>
-     </table></center>
+   </table>
   </body>
 
 </html>
