--- a/titanic.html
+++ b/titanic.html
@@ -111,67 +111,78 @@
 . Plus de 15 000 ouvriers se pressent dans l’enceinte d’Harland and Wolff à Belfast chaque matin pour produire des paquebots de fer et d’acier. Ils posent la quille du Titanic le 31 mars 1909 Au cours des deux années qui suivent, près de 3 000 ouvriers se dévouent corps et âme au Titanic. Ils rivettent des tôles d’acier superposées afin de donner forme à la coque. Thomas Andrews, principal architect naval Harland and Wolff, en supervise la construction.
 Le Titanic est lancé le 31mai 1911. Afin que le paquebot ne heurte pas la rive d’en face, il est retenu et stoppé par six chaines en acier de 80 tonnes chacune, puis il est remorqué et mis au quai d'armement par cinq remorqueurs.
 Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandement du Titanic. Le 31 mars, à Belfast, il est relevé par Edward Smith.
-
-
-  <h3>Système de propulsion</h3>
-Le RMS Titanic était propulsé par 29 chaudières et propulsé par 3 hélices entraînées par des turbines à vapeur. Les turbines à vapeur étaient une technologie relativement nouvelle et permettaient au Titanic d’atteindre une vitesse maximale de 23 nœuds. Car le cahier des charges est impressionnant. Tenons-nous le pour dit, le Titanic sera un bijou d’innovation et de technologie. <br />
 </p>
+
+  <h3 class="prop">Système de propulsion</h3>
+  <p>
+  Le RMS Titanic était propulsé par 29 chaudières et propulsé par 3 hélices entraînées par des turbines à vapeur. Les turbines à vapeur étaient une technologie relativement nouvelle et permettaient au Titanic d’atteindre une vitesse maximale de 23 nœuds. Car le cahier des charges est impressionnant. Tenons-nous le pour dit, le Titanic sera un bijou d’innovation et de technologie. <br />
+  </p>
+  
 		<td>   <img src="https://cdn.glitch.me/f5ce6009-1228-4be5-94bb-b3777fc53977/titanicvideopropulsion.gif?v=1740521690842"
        width="600"/> </td>
-</tr>
-  <tr>	
+
     <td> <img src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanicelices.jpg?v=1740507359917"
        width="440"/> </td>
-  </tr><br />
-  <h3>Les accidents</h3>
-Lorsque le géant des mers quitte enfin Southampton le 10 avril 1912,un accident se produit. Le Titanic déplace une telle masse d’eau que le paquebot New York, à couple avec un autre navire, rompt ses amarres et se rapproche dangereusement de lui. Les deux coques se frôlent à un mètre près. L’accident est évité de justesse grâce à l’intervention d’un remorqueur.
 
-Dans l'après-midi du 13 avril, un incendie est éteint dans la salle des chaudières no 5. Il faisait rage depuis plusieurs jours et avait été décelé le jour du départ. Il ne s'agissait pas d'un fait inhabituel sur les navires de l'époque, mais celui-ci était d'une rare intensité et une douzaine d'hommes ont été nécessaires pour le maîtriser, mais ce feu de charbon a pu fragiliser les cloisons étanche de ce compartiment.
+  <h3 class="prop">Les accidents</h3>
+  <p>
+  Lorsque le géant des mers quitte enfin Southampton le 10 avril 1912,un accident se produit. Le Titanic déplace une telle masse d’eau que le paquebot New York, à couple avec un autre navire, rompt ses amarres et se rapproche dangereusement de lui. Les deux coques se frôlent à un mètre près. L’accident est évité de justesse grâce à l’intervention d’un remorqueur.
 
-<center>La White Star Line accorde un grand soin à la sécurité du paquebot lors de sa construction. C’est pourquoi elle insiste sur une coque à double fond, dotée de 16 compartiments étanches. La fermeture des portes étanches s’effectue depuis la passerelle par commande électrique. Le navire peut ainsi continuer à flotter avec 2 compartiments principaux envahis.</FONT> </center><br />
-      </p>
-   <h2><u>III)  Le naufrage<div class="lien"><font face="Courier"> </u></h2>
-  <center><img src="https://cdn.glitch.me/f5ce6009-1228-4be5-94bb-b3777fc53977/tivideonaufra.gif?v=1740504912894"
-       width="500"/></center><br />
+  Dans l'après-midi du 13 avril, un incendie est éteint dans la salle des chaudières no 5. Il faisait rage depuis plusieurs jours et avait été décelé le jour du départ. Il ne s'agissait pas d'un fait inhabituel sur les navires de l'époque, mais celui-ci était d'une rare intensité et une douzaine d'hommes ont été nécessaires pour le maîtriser, mais ce feu de charbon a pu fragiliser les cloisons étanche de ce compartiment.
+  <br/>
+    La White Star Line accorde un grand soin à la sécurité du paquebot lors de sa construction. C’est pourquoi elle insiste sur une coque à double fond, dotée de 16 compartiments étanches. La fermeture des portes étanches s’effectue depuis la passerelle par commande électrique. Le navire peut ainsi continuer à flotter avec 2 compartiments principaux envahis.
+  </p>
+  
+  <h2 class="lien"><u>III)  Le naufrage</u></h2>
+   <img src="https://cdn.glitch.me/f5ce6009-1228-4be5-94bb-b3777fc53977/tivideonaufra.gif?v=1740504912894"
+       width="500"/>
 
-<p>
+  <p>
   Cela ne fait que trois jours que le Titanic a pris la mer pour son voyage inaugural, au départ de Southampton, dans le sud de l’Angleterre. Pour son capitaine Edward J. Smith, c’est un dimanche comme les autres. Il inspecte le navire mais refuse de mener un exercice d’évacuation pourtant à l’ordre du jour. Il préside à un service religieux puis s’entretient avec ses officiers pour rectifier la position du paquebot. D’après leurs calculs, le Titanic avance à une vitesse moyenne de 22 nœuds. Au coucher du Soleil, le 14 avril 1912, la température devient négative. La surface de l’océan brille comme du verre, les icebergs, fréquents au printemps dans l’Atlantique Nord, sont difficiles à repérer.
   <br />
   Malgré tout, le capitaine Smith maintient le navire à pleine vitesse. Il pense que l’équipage saura réagir à temps s’il en apparaît un.
-  <h3>Premières alertes</h3>
+  </p>
+  <h3 class="prop">Premières alertes</h3>
+  <p>
   Il y a en effet quelques icebergs à l’horizon. À 19h30, le Titanic a déjà reçu cinq avertissements de navires voisins. Jack Phillips, radiotélégraphiste de la société Marconi, prend note d’un message détaillé en provenance d’un autre bateau lui communiquant les coordonnées géographiques d’un « gros paquet de glace et d’un nombre important d’icebergs ». Mais Jack Phillips est occupé à transmettre les messages personnels des passagers et ne le montrera vraisemblablement jamais à aucun officier.<br />
 
   À 22h55, un autre paquebot, le Californian, prévient être complètement immobilisé et pris entre des pains de glace compacts. Aucun de ces messages ne commence par le code officiel qui obligerait Jack Phillips à les montrer au capitaine. Et il n’est pas d’humeur à se faire interrompre. « Tais-toi, tais-toi ! répond-il au télégraphiste qui l’importune. Je suis occupé ! » Un peu après, le radiotélégraphiste du California coupera pour la nuit.<br />
   Alors que le Titanic poursuit sa course, les vigies Frederick Fleet et Reginald Lee scrutent l’obscurité. Juste avant 23h40, Frederick Fleet aperçoit une tâche plus sombre que la mer qui attend sur la trajectoire du paquebot. À mesure que le bateau s’approche, on se rend à l’évidence. Frederick Bell tire la sonnette d’alarme trois fois et téléphone au pont.<br />
 
   « Qu’avez-vous vu ? » lui demande la voix dans le receveur. « Iceberg, droit devant ! », répond-il.<br />
-   <h3>Tantatives ratées</h3>
-   Sur le pont, William Murdoch, commandant en second, tire la poignée du télégraphe de la salle des machines pour ordonner de « s’arrêter » et hurle qu’on vire à bâbord. Mais il ordonne également de faire « marche arrière toute » pour essayer d’éviter la glace. Puis il appuie sur le bouton permettant de fermer les cloisons étanches du paquebot.<br />
+  </p> 
+  <h3 class="prop">Tantatives ratées</h3>
+  <p> 
+  Sur le pont, William Murdoch, commandant en second, tire la poignée du télégraphe de la salle des machines pour ordonner de « s’arrêter » et hurle qu’on vire à bâbord. Mais il ordonne également de faire « marche arrière toute » pour essayer d’éviter la glace. Puis il appuie sur le bouton permettant de fermer les cloisons étanches du paquebot.<br />
   Pendant plus de 30 secondes, ils retiennent leur souffle. Au dernier moment, la proue du Titanic vire à bâbord et la montagne de glace glisse le long de la coque à tribord. Frederick Fleet pense que le navire l’a échappé belle.<br />
 
   Mais avec les icebergs, les apparences sont trompeuses : 90 % de la surface d’un iceberg se trouvent sous la surface, et celui-ci a déjà percuté les tôles de la coque du Titanic à tribord. Nombreux sont les passagers qui ne remarquent même pas l’impact, mais ceux qui se trouvent à la proue savent qu’ils ont heurté un iceberg car des morceaux ont atterri sur le pont de coffre.En-dessous, dans la chaufferie et dans la salle du courrier, à l’avant du bateau, l’équipage est préoccupé par une irruption d’eau dans les cinq premiers compartiments. Le sort du Titanic est limpide. Les cloisons « étanches » n’y feront rien. Celles-ci ne s’élèvent pas plus haut que le Pont E (elles se trouvent au-dessus de la surface sur un navire en bon état mais elles deviennent inutiles si la proue du bateau commence à piquer et que l’océan vient lécher leur rebord supérieur).
   <br />
   Le poids de l’eau inondant les cinq premiers compartiments exerce une traction assez importante pour que celle-ci puisse se déverser dans le sixième et ainsi tirer le navire un peu plus près du fond et causer un débordement dans le septième… Immanquablement, chaque compartiment se remplit et inonde le suivant. Selon les estimations de l’équipage, le Titanic n’a plus que deux heures devant lui environ.
   <br />
-  <h3>Les femmes et les enfants d'abord !</h3><br />
+  </p>
+  <h3 class="prop">Les femmes et les enfants d'abord !</h3><br />
+  <p>
   Le capitaine Smith ordonne d’envoyer un appel de détresse, de lancer des fusées de détresse et d’embarquer sur les canots de sauvetage.
   <br />
   Un cruel défaut de bureaucratie se révèle alors. Selon les régulations de la Commission du Commerce, dépassées mais toujours en vigueur, tous les navires de plus de 10 000 tonnes doivent compter au moins 16 canots de sauvetage ainsi que des radeaux et des flotteurs supplémentaires. Ces régulations convenaient bien aux anciens paquebots lorsqu’elles ont été adoptées en 1896, mais sont honteusement inadaptées au béhémoth de plus de 46 000 tonnes qu’est le Titanic. La Commission du Commerce croyait que les navires de construction récente avaient très peu de chances de couler, ce qui rendait inutile de débattre du nombre de canots de sauvetage à embarquer.Parmi les embarcations de sauvetage du Titanic approuvées par la Commission, on trouve alors 16 canots en bois et quatre radeaux pliables entoilés Engelhardt. Celles-ci ne peuvent accueillir que la moitié des passagers. Beaucoup seront laissés pour compte.<br />
 
   Les officiers du navire connaissent la capacité maximale des canots de sauvetage mais ne les remplissent pas complètement, et ce pour deux raisons. Tout d’abord, selon le témoignage du deuxième officier Charles Lightoller, l’équipage soupçonne le mécanisme d’abaissement de ne pas pouvoir supporter le poids de 70 passagers par canot. Et puis, les membres d’équipage savent qu’ils ne peuvent pas se permettre de perdre du temps avant d’évacuer ; le bateau risquerait de couler avant que les canots de sauvetage et les Engelhardt n’atteignent l’eau. Dans la précipitation des ultimes instants du naufrage, une embarcation tombe dans l’océan avant que l’équipage n’ait fini de la préparer et une autre est embarquée par-dessus bord par les vagues et se retrouve à l’envers.En tout, les canots de sauvetage quittent le Titanic avec plus de 400 places vides. Parmi les occupants, peu sont des hommes. Quand le capitaine ordonne qu’on remplisse les canots, il prend un porte-voix et aboie : « Les femmes et les enfants d’abord ! » À bâbord, Charles Lightoller ne fait monter que des femmes et des enfants sur les canots, à l’exception d’un passager sachant naviguer. De son côté, à tribord, le commandant en second William Murdoch interprète la consigne autrement. Il fait embarquer autant de femmes et d’enfants qu’il y en a et attribue les places restantes aux hommes.
   <br />
- 
+  </p>
 
-  <h3>Ultimes moments</h3><br />
+  <h3 class="prop">Ultimes moments</h3><br />
+  <p>
   L’eau continue d’inonder le paquebot. Environ deux heures et quarante minutes se sont écoulées depuis que celui-ci a heurté l’iceberg quand la poupe s’élève dans les airs et que la proue plonge. Ceux qui ont réussi à monter sur un canot regardent la scène, horrifiés, tandis que ceux qui sont encore à bord se ruent sur le pont arrière, désormais en pente raide, pour gagner quelques ultimes secondes avant de glisser ou de sauter dans l’océan.
   <br />
   Le 15 avril 1912, à 2h20, le Titanic est englouti dans les eaux glacées de l’Atlantique. Tous ceux qui n’ont pas réussi à gagner un canot de sauvetage sombrent avec le paquebot. Les gilets de sauvetage n’auront servi à rien. Plus de 1 500 personnes (nantis comme ouvriers) se noient ou meurent d’hypothermie.
   <br />
   Pour ceux qui sont montés sur une embarcation, les secours ne tarderont pas à arriver. En sombrant, le Titanic parviendra à contacter le R.M.S. Carpathia qui finira par arriver vers 4 heures du matin pour secourir les quelque 705 survivants du naufrage.
-</p>
+  </p>
 
-<h3>Les chiffres</h3>
-<table>
+<h3 class="prop">Les chiffres</h3>
+  <p>
+  <table>
    <table border="1">  
 <tr>
 		<td><strong> </strong></td>
