🕍🌏 Checkpoint ./titanic.html:74308084/40 ./titanic.css:74308084/25 ./style.css:74308084/258 ./page-accueil-site.css:74308084/1133 ./Page-Acceuil-site.html:74308084/65

--- a/titanic.html
+++ b/titanic.html
@@ -182,7 +182,6 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
 
 <h3 class="prop">Les chiffres</h3>
   <p>
-  <table>
    <table border="1">  
 <tr>
 		<td><strong> </strong></td>
@@ -221,11 +220,12 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
       
 </tr>
 </table>
+  </p>
   <p>
-    Pour plus de précisions consultez <a href="https://fr.wikipedia.org/wiki/Titanic">wikipedialien</a>
+    Pour plus de précisions consultez <a href="https://fr.wikipedia.org/wiki/Titanic" class="link">wikipedialien</a>
   plus suite page suivante et precedente
   </p>
-   </table>
+   
   
   </center>
   </body>
