😀🏠 Checkpoint ./Page-Acceuil-site.html:74308084/2536 ./page-accueil-site.css:74308084/88

--- a/Page-Acceuil-site.html
+++ b/Page-Acceuil-site.html
@@ -103,7 +103,12 @@ Le mythe du Titanic ne cesse de fasciner que ce soit par le nombre de victime, l
       </div>
       <div class="resume-container4">
           <p class="texte1" >
-            EDFVbfsdtcfghj
+          Le <span class="highlight2">Titan</span> était un sous-marin submersible conçu pour des expéditions en eaux profondes, notamment pour explorer l'épave du Titanic. 
+    Exploité par la compagnie <span class="highlight2">OceanGate</span>, il représentait une prouesse technologique moderne, capable d'atteindre des profondeurs extrêmes 
+    grâce à sa coque en fibre de carbone et en titane. Conçu pour accueillir un équipage réduit, il disposait d’un espace intérieur minimaliste, 
+    axé sur la fonctionnalité plutôt que le confort. Avec sa capacité à plonger à plus de <span class="highlight2">3 800 mètres de profondeur</span>, 
+    le Titan symbolisait l'ambition humaine de repousser les limites de l’exploration sous-marine. Il entreprit une expédition marquante 
+    en <span class="highlight2">juin 2023</span>, visant à documenter les vestiges du Titanic, illustrant ainsi le lien entre passé et technologies d’avant-garde.
           </p>
           <p class="twt1">
             Pour plus découvrir sur l'histoire du Titan cliquez sur ces images
