--- a/titanic.html
+++ b/titanic.html
@@ -100,9 +100,10 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
         
 
    <div class="section" id="Le naufrage">
-  <h2 class="lien"><u>Le naufrage</u></h2>
+  <h2>III) Le naufrage</h2>
+     <center>
    <img src="https://cdn.glitch.me/f5ce6009-1228-4be5-94bb-b3777fc53977/tivideonaufra.gif?v=1740504912894"
-       width="500"/>
+       width="500"/></center>
 
   <p>
   Cela ne fait que trois jours que le Titanic a pris la mer pour son voyage inaugural, au départ de Southampton, dans le sud de l’Angleterre. Pour son capitaine Edward J. Smith, c’est un dimanche comme les autres. Il inspecte le navire mais refuse de mener un exercice d’évacuation pourtant à l’ordre du jour. Il préside à un service religieux puis s’entretient avec ses officiers pour rectifier la position du paquebot. D’après leurs calculs, le Titanic avance à une vitesse moyenne de 22 nœuds. Au coucher du Soleil, le 14 avril 1912, la température devient négative. La surface de l’océan brille comme du verre, les icebergs, fréquents au printemps dans l’Atlantique Nord, sont difficiles à repérer.
@@ -139,6 +140,10 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
   </p>
 
   <h3 class="prop">Ultimes moments</h3><br />
+     <center>
+     <td>   <img src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titaniccannot.png?v=1740606232234"
+       width="470"/> </td>
+     </center>
   <p>
   L’eau continue d’inonder le paquebot. Environ deux heures et quarante minutes se sont écoulées depuis que celui-ci a heurté l’iceberg quand la poupe s’élève dans les airs et que la proue plonge. Ceux qui ont réussi à monter sur un canot regardent la scène, horrifiés, tandis que ceux qui sont encore à bord se ruent sur le pont arrière, désormais en pente raide, pour gagner quelques ultimes secondes avant de glisser ou de sauter dans l’océan.
   <br />
@@ -147,7 +152,7 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
   Pour ceux qui sont montés sur une embarcation, les secours ne tarderont pas à arriver. En sombrant, le Titanic parviendra à contacter le R.M.S. Carpathia qui finira par arriver vers 4 heures du matin pour secourir les quelque 705 survivants du naufrage.
   </p>
  <div class="section"id="L'épave">   
-   <h2>L'épave</h2>
+   <h2>IV) L'épave</h2>
         <tr>
 		<td>   <img src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanicepave.jpg?v=1740522347652"
        width="410"/> </td>
