--- a/Page-Acceuil-site.html
+++ b/Page-Acceuil-site.html
@@ -18,9 +18,10 @@
     </audio></br>
     <a style="color:white" href="index.html">Accueil</a>
     <h1 id="titre">Le RMS Titanic</h1>
-    <h3>
-      Bienvenue sur le site Histoire Navales sur cette sur cette section du site nous vous présenterons le RMS titanic et les tristement célébre histoire qui l'entourent
-    </h3>!
+   <center> <p>
+      Bienvenue sur le site Histoire Navales sur cette section du site 
+     nous vous présenterons la tristement célèbre histoire du RMS Titanic
+    </p>!</center>
     
     <div class="rechercheP1">
       <a href="#Titanic">
