--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
     </a>
   <div class="resume-container">
         <div class="image-section">
-            <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/f29er32ls6ia1.webp?v=1738581241195" alt="tit1" class="image1"/></a>
+           
             <br/>
-            <a href="titanic.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/titanic2.jpg?v=1738141196792" alt="tit2" class="image2"/></a>
+            <a href="Page-Acceuil-site.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/affiche.jpg?v=1740609122707" width="260" alt="tit2" class="image2"/></a>
         </div>
   </body
 </html>  
     
-t'inquiete j'ai un peu moddif mais ilfaut juste que l'ecritur en blanc soit noir pour etre visible et j'arrive pas a faire des lien en dessous ou lorsqu'on clique sur la pho    
+t'inquiete j'ai un peu moddif mais ilfaut juste que l'ecritur en blanc soit noir pour etre visible et j'arrive pas a faire des lien en dessous ou lorsqu'on clique sur la photo on va sur la page     
