--- a/index.html
+++ b/index.html
@@ -73,8 +73,13 @@
   <div class="resume-container">
         <div class="image-section">
            
-            <br/>
-            <a href="Page-Acceuil-site.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/affiche.jpg?v=1740609122707" width="260" alt="tit2" class="image2"/></a>
+            <br/><tr>
+        <td> <a href="Page-Acceuil-site.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/affiche.jpg?v=1740609122707" width="260" alt="tit2" class="image2"/></a>
+        </div></td>
+        <td> 1490</td>   
+</tr>
+            
+    <a href="?????"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/2navire.jpg?v=1740609807934" width="260" alt="tit2" class="image2"/></a>
         </div>
   </body
 </html>  
