🙅🦀 Checkpoint ./Page-Acceuil-site.html:74872078/12 ./titanic.html:74872078/145

--- a/titanic.html
+++ b/titanic.html
@@ -207,10 +207,10 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
       
 </tr>
 </table>
+     <a href="#titre">début</a>
   </p>
   <p>
     Pour plus de précisions consultez <a href="https://fr.wikipedia.org/wiki/Titanic" class="link">wikipedialien</a>
-  plus suite page suivante et precedente
   </p>
  </div>
     </div>
