--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <center>
       <a class="texte2" id="Minerve">La Minerve</a>
       <br/>
-      
+      <a href="Page-Minerve.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/minerev.jpg?v=1740694568074"height="385" width="260" alt="tit2" class="image2"/></a>
       </center>
     </div>
     <div class="page">
@@ -111,8 +111,32 @@
       <br/>
       
       </center>
+    <div class="page"
     </div>   
   </div>
   </div>
+  <a id="credit" class="titre">
+      Crédit
+    </a>
+    <br/>
+    <a class="credit">
+    <u>Site crée par :</u>
+      <br/>
+      Nicola Pinto Ramos
+      <br/>
+      Adrien Rognier
+      <br/>
+      Jacques De Lapisse
+    </a>
+    <br/>
+    <a class="titre" id="source">
+      Sources :
+    </a>
+    <br/>
+    <a class="credit">
+      Wikipedia :...
+      <br/>
+      .. : ...
+    </a>
 </body>
 </html>  
