🏰💿 Checkpoint ./Page-Olympique.html:74308084/44 ./Page-Minerve.html:74308084/40 ./Page-Britanique.html:74308084/53

--- a/Page-Britanique.html
+++ b/Page-Britanique.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="age-britanique.css">
     <title>Le RMS Britanique</title>
   </head>
+  <header>
+  
+  
+  
+  
+  </header>
   <body>
   
   
