--- a/Page-Olympique.html
+++ b/Page-Olympique.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="Page-olympique.css">
     <title>Le RMS Olympique</title>
   </head>
+  <header>
+  
+  
+  
+  </header>
   <body>
   
   
