--- a/Page-Minerve.html
+++ b/Page-Minerve.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="page-minerve.css">
     <title>La Minerve</title>
   </head>
+  <header>
+  
+  
+  
+  </header>
   <body>
   
   
