🏨🛬 Checkpoint ./titanic.html:74308084/158 ./Page-Britanique.html:74308084/1

--- a/titanic.html
+++ b/titanic.html
@@ -58,7 +58,7 @@
     <p>    J.P Morgan  </p>
     </center>
   <p>    
-   Durant l'année 1907, pour concurrencer le Lusitania et le Mauretania, deux rapides paquebots de la Cunard Line, Lord William James Pirrie, associé de la société du chantier naval Harland and Wolff à Belfast, et Joseph Bruce Ismay, directeur général de la compagnie maritime White Star Line, prennent la décision de construire une série de trois paquebots capables de surpasser en confort, sécurité et élégance les autres compagnies. Leurs noms, Olympic, Titanic et le Britannique. Ce projet est financé par le millionnaire américain J.P. Morgan. Le Titanic a coûté 1,5 million de livres soit 7,5 millions de dollars américains à l'époque.
+   Durant l'année 1907, pour concurrencer le Lusitania et le Mauretania, deux rapides paquebots de la Cunard Line, Lord William James Pirrie, associé de la société du chantier naval Harland and Wolff à Belfast, et Joseph Bruce Ismay, directeur général de la compagnie maritime White Star Line, prennent la décision de construire une série de trois paquebots capables de surpasser en confort, sécurité et élégance les autres compagnies. Leurs noms, <a href="Page-Olympique.html" class="link">Olympic</a>, Titanic et le <a href="Page-Britanique" class="link">Britannique</a>. Ce projet est financé par le millionnaire américain J.P. Morgan. Le Titanic a coûté 1,5 million de livres soit 7,5 millions de dollars américains à l'époque.
   </p>  
   <h3 class="prop">b) La construction</h3><br />
 
