--- a/Page-Britanique.html
+++ b/Page-Britanique.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/Britanique.html" rel="stylesheet">
     <link rel="stylesheet" href="Page-britanique.css">
     <title>Le RMS Britanique</title>
   </head>
