👨‍❤️‍💋‍👨✈️ Checkpoint ./Page-Minerve.html:74308084/44 ./Page-Olympique.html:74308084/16 ./Page-Britanique.html:74308084/17 ./page-minerve.css:74308084/168 ./page-britanique.css:74308084/194 ./Page-olympique.css:74308084/258

--- a/Page-Minerve.html
+++ b/Page-Minerve.html
@@ -9,7 +9,7 @@
   </head>
   <header>
     <a style="color:white" href="index.html">Accueil</a>
-    <h1 id="titre">Le RMS Titanic</h1>
+    <h1 id="titre">La Minerve</h1>
    <center> <p>
       Bienvenue sur le site Histoire Navales sur cette section du site 
      nous vous présenterons la tristement célèbre histoire du RMS Titanic
