--- a/titanic.html
+++ b/titanic.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="header">
         <div class="home">
-          <a href="Page-Acceuil-site.html">Accueil</a>
+          <a href="index.html">Accueil</a>
         </div>
         <div class="upper">
           <div class="titre">Le Titanic</div>
