--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </audio>
     
     <h1 id="titre" class="titre">Histoire-Navales.com</h1>
-    <h3 style="margin-left: 500px; margin-right: 500px; color:black; font-size: 20px">
+    <h3 style="margin-left: 10%; margin-right: 10%; color:black; font-size: 20px">
       Bienvenue sur Histoire Navales, sur ce site nous parlons de differentes histoires dans le monde du naval
     </h3>
     <br/>
