--- a/Page-Olympique.html
+++ b/Page-Olympique.html
@@ -9,10 +9,10 @@
   </head>
   <header>
     <a style="color:white" href="index.html">Accueil</a>
-    <h1 id="titre">Le RMS Olympique</h1>
+    <center><h1 id="titre">Le RMS Olympique</h1></center>
    <center> <p>
       Bienvenue sur le site Histoire Navales sur cette section du site 
-     nous vous présenterons la tristement célèbre histoire du RMS Titanic
+     nous vous présenterons la tristement célèbre histoire du RMS Olympique
     </p>!</center>
     
     <div class="rechercheP1">
