--- a/Page-Olympique.html
+++ b/Page-Olympique.html
@@ -9,12 +9,12 @@
   </head>
   <header>
     <a style="color:white" href="index.html">Accueil</a>
-    <center><h1 id="titre">Le RMS Olympique</h1></center>
-   <center> <p>
+    <center><br><br><br><div class="super-grand-titre">Le RMS Olympique</div></center>
+   <center> <p><br><div class="color">
       Bienvenue sur le site Histoire Navales sur cette section du site 
      nous vous présenterons la tristement célèbre histoire du RMS Olympique
-    </p>!</center>
-    
+     </div></p>!</center><br><br><br>
+   
     <div class="rechercheP1">
       <a href="#Titanic">
          <div class="rechercheP2">
