--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
       <div class="page">
           <a class="texte2" id="Minerve">La Minerve</a>
           <a href="Page-Minerve.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/minerev.jpg?v=1740694568074"height="385" width="260" alt="tit2" class="image2"/></a>
-      </div>
-    <div class="page">
-      <a class="texte2" id="sous-marin">Sous marins</a>
-    </div>   
+      </div>   
   </div>
   </div>
   <a id="credit">
@@ -129,7 +126,7 @@
       <br/>
       <a class="credit" href="">La Minerve</a>
       <br/>
-      <a class="credit" href="">sous-marin</a>
+      <a class="credit" href="https://fr.wikipedia.org/wiki/Accident_du_submersible_Titan">Le Titan</a>
 
 </body>
 </html>  
