--- a/index.html
+++ b/index.html
@@ -41,12 +41,6 @@
         Le RMS Britannique 
         </div>
       </a>
-
-      <a href="#Titan">
-        <div class="lien">
-        Le Titan
-        </div>
-      </a>
        
       <a href="#Minerve">
         <div class="lien">
@@ -82,7 +76,7 @@
     </div>
     <div class="page">
       <a class="texte2" id="Olympique">Le RMS Olympique</a>
-      <a href="Page-Olympique.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/olympique%20construction.jpg?v=1740606774852"height="385" width="260" alt="tit2" class="image2"/></a>
+      <a href="Page-Olympique.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/326px-Olympic_postcard.jpg?v=1740903605199"height="385" width="260" alt="tit2" class="image2"/></a>
     </div>
     <div class="page">
       <a class="texte2" id="Britanique">Le RMS Britanique</a>
