add britanique page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
 </header>
 <body>
-  <div class="p" style="margin-top: 100px">
+  <div class="p" style="margin-top: 30px">
   <div class="pt">
     <div class="page">
       <a class="texte2" id="Titanic">Le RMS Titanic</a>
@@ -80,7 +80,7 @@
     </div>
     <div class="page">
       <a class="texte2" id="Britanique">Le RMS Britanique</a>
-      <a href="Page-Britanique.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Lebritannique.jpg?v=1740606784659"height="385" width="260" alt="tit2" class="image2"/></a>
+      <a href="Page-Britanique.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Screenshot_2025-03-02_at_10.04.15.png?v=1740906352871"height="385" width="260" alt="tit2" class="image2"/></a>
     </div>
     </div>
     <div class="p2">
@@ -94,33 +94,27 @@
       </div>   
   </div>
   </div>
-  <a id="credit">
-      Crédit
-    </a>
-    <br/>
-    <a class="credit">
-    <u>Site crée par :</u>
-      <br/>
-      Nicola Pinto Ramos
-      <br/>
-      Adrien Rognier
-      <br/>
-      Jacques De Lapisse
-    </a>
-    <br/>
-    <a id="source">
-      Sources :
-    </a>
-    <br/>
-      <a class="credit" href="https://fr.wikipedia.org/wiki/Titanic">Le Titanic</a>
-      <br/>
-      <a class="credit" href="">Le Britanique</a>
-      <br/>
-      <a class="credit" href="">L'olympique</a>
-      <br/>
-      <a class="credit" href="">La Minerve</a>
-      <br/>
-      <a class="credit" href="https://fr.wikipedia.org/wiki/Accident_du_submersible_Titan">Le Titan</a>
+  
+  <footer class="footer-container">
+    <div class="footer-section">
+      <div class="credits-section">
+        <h3 id="credit">Crédits</h3>
+        <p><u>Site crée par :</u></p>
+        <p>Nicola Pinto Ramos</p>
+        <p>Adrien Rognier</p>
+        <p>Jacques De Lapisse</p>
+      </div>
+      
+      <div class="sources-section">
+        <h3 id="source">Sources</h3>
+        <p><a class="credit" href="https://fr.wikipedia.org/wiki/Titanic">Le Titanic</a></p>
+        <p><a class="credit" href="">Le Britanique</a></p>
+        <p><a class="credit" href="">L'olympique</a></p>
+        <p><a class="credit" href="">La Minerve</a></p>
+        <p><a class="credit" href="https://fr.wikipedia.org/wiki/Accident_du_submersible_Titan">Le Titan</a></p>
+      </div>
+    </div>
+  </footer>
 
 </body>
 </html>  
