--- a/Page-Britanique.html
+++ b/Page-Britanique.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="page-britanique.css">
-    <title>Le RMS Britannique</title>
+    <title>Le RMS Britannic</title>
   </head>
   <body>
     <div class="container">
@@ -14,7 +14,7 @@
           <a href="index.html">Accueil</a>
         </div>
         <div class="upper">
-          <div class="titre">Le RMS Britannique</div>
+          <div class="titre">Le RMS Britannic</div>
         </div>
         <div class="lower">
           <div class="lien">
