--- a/Page-Olympique.html
+++ b/Page-Olympique.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="Page-olympique.css">
-  <title>Le RMS Olympique</title>
+  <title>Le RMS Olympic</title>
 </head>
 <body>
   <div class="container">
@@ -17,7 +17,7 @@
         <a style="color:white" href="index.html">Accueil</a>
       </div>
       <div class="upper">
-        <div class="titre">Le RMS Olympique</div>
+        <div class="titre">Le RMS Olympic</div>
       </div>
       <div class="lower">
         <div class="lien">
