--- a/titanic.html
+++ b/titanic.html
@@ -14,7 +14,7 @@
           <a href="index.html">Accueil</a>
         </div>
         <div class="upper">
-          <div class="titre">Le Titanic</div>
+          <div class="titre">Le RMS Titanic</div>
         </div>
         <div class="lower">
           <div class="lien">
