--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         Le RMS Britannic
         </div>
       </a>
+
+      <a href="#Titan">
+        <div class="lien">
+        Le Titan
+        </div>
+      </a>
        
       <a href="#Minerve">
         <div class="lien">
