--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <h1 id="titre" class="titre">Histoire-Navales.com</h1>
     <h3 style="margin-left: 10%; margin-right: 10%; color:black; font-size: 20px">
-      Bienvenue sur Histoire Navales, sur ce site nous parlons de differentes histoires dans le monde du naval
+      Bienvenue sur Histoires Navales, votre portail dédié aux récits fascinants des navires qui ont marqué l'histoire maritime. Découvrez les destins extraordinaires des plus célèbres bâtiments ayant sillonné les océans du monde.
     </h3>
     <br/>
     <br/>
