--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="page">
           <a class="texte2" id="Minerve">La Minerve</a>
-          <a href="Page-Minerve.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/minerev.jpg?v=1740694568074"height="385" width="260" alt="tit2" class="image2"/></a>
+          <a href="Page-Minerve.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/minerve_postcard.webp?v=1740913065097"height="385" width="260" alt="tit2" class="image2"/></a>
       </div>   
   </div>
   </div>
