🎟🏫 Checkpoint ./.glitch-assets:74483170/1010 ./index.html:74308084/470

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="page">
       <a class="texte2" id="Britanique">Le RMS Britannic</a>
-      <a href="Page-Britanique.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Screenshot_2025-03-02_at_10.04.15.png?v=1740906352871"height="385" width="260" alt="tit2" class="image2"/></a>
+      <a href="Page-Britanique.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/britannique.jpg?v=1740609937151"height="385" width="260" alt="tit2" class="image2"/></a>
     </div>
     </div>
     <div class="p2" id="sous-marins-section">
@@ -84,7 +84,7 @@
       </div>
       <div class="page">
           <a class="texte2" id="Minerve">La Minerve</a>
-          <a href="Page-Minerve.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/minerve_postcard.webp?v=1740913065097"height="385" width="260" alt="tit2" class="image2"/></a>
+          <a href="Page-Minerve.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/minerev.jpg?v=1740694568074"height="385" width="260" alt="tit2" class="image2"/></a>
       </div>   
   </div>
   </div>
@@ -103,7 +103,7 @@
         <h3 id="source">Sources</h3>
         <p><a class="credit" href="https://fr.wikipedia.org/wiki/Titanic">Le Titanic</a></p>
         <p><a class="credit" href="">Le Britanique</a></p>
-        <p><a class="credit" href="">L'olympique</a></p>
+        <p><a class="credit" href="https://pineapple-ethereal-spleen.glitch.me/Page-Olympique.html#source">L'olympique</a></p>
         <p><a class="credit" href="">La Minerve</a></p>
         <p><a class="credit" href="https://fr.wikipedia.org/wiki/Accident_du_submersible_Titan">Le Titan</a></p>
       </div>
