Before import of adrobot08/nsi-siteweb without specified path ./index.html:74308084/144 ./Page-Britanique.html:74308084/8

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <a href="Page-Olympique.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/326px-Olympic_postcard.jpg?v=1740903605199"height="385" width="260" alt="tit2" class="image2"/></a>
     </div>
     <div class="page">
-      <a class="texte2" id="Britanique">Le RMS Britannic</a>
+      <a class="texte2" id="Britanique">Le RMS Britannique</a>
       <a href="Page-Britanique.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/britannique.jpg?v=1740609937151"height="385" width="260" alt="tit2" class="image2"/></a>
     </div>
     </div>
