💑🤘 Checkpoint ./index.html:74308084/376 ./Page-Britanique.html:74308084/24 ./Page-Olympique.html:74308084/18 ./LICENSE:74308084/254

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="page">
       <a class="texte2" id="Britanique">Le RMS Britannic</a>
-      <a href="Page-Britanique.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Screenshot_2025-03-02_at_10.04.15.png?v=1740906352871"height="385" width="260" alt="tit2" class="image2"/></a>
+      <a href="Page-Britanique.html"><image src="https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/Lebritannique.jpg?v=1740606784659"height="385" width="260" alt="tit2" class="image2"/></a>
     </div>
     </div>
     <div class="p2" id="sous-marins-section">
