🐏🏞 Checkpoint ./Page-Minerve.html:74308084/256 ./titanic.html:74872078/818

--- a/titanic.html
+++ b/titanic.html
@@ -217,6 +217,13 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
   </p>
  </div>
     </div>
-  </body>
+    </body>
 
 </html>
+  
+  
+  <ul>
+    <li>6 officiers</li>
+            <li>15 officiers mariniers</li>
+            <li>31 quartiers-maîtres et matelots</li>
+          </ul>
