--- a/titanic.html
+++ b/titanic.html
@@ -222,8 +222,51 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
 </html>
   
   
-  <ul>
-    <li>6 officiers</li>
-            <li>15 officiers mariniers</li>
-            <li>31 quartiers-maîtres et matelots</li>
-          </ul>
+<h3 class="prop" style="margin-top: 50px;">Liste des personnalités décédées lors du naufrage</h3>
+  <p>
+<ul>
+<h4 class="prop" style="margin-top: 50px;">A</h4>
+<li>Famille Allison</li>
+<li>Thomas Andrews</li>
+<li>John Jacob Astor IV</li>
+<h4 class="prop" style="margin-top: 50px;">B</h4>
+<li>Roger Bricoux</li>
+<li>Archibald Butt</li>
+<li>Thomas Byles</li>
+<h4 class="prop" style="margin-top: 50px;">C</h4>
+<li>Auguste Coutin (cuisinier)</li>
+<h4 class="prop" style="margin-top: 50px;">F</h4>
+<li>Jacques Futrelle</li>
+<h4 class="prop" style="margin-top: 50px;">G</h4>
+<li>Sidney Leslie Goodwin</li>
+<li>Benjamin Guggenheim</li>
+<h4 class="prop" style="margin-top: 50px;">H</h4>
+<li>Henry Birkhardt Harris</li>
+<li>Wallace Hartley</li>
+<li>Charles Melville Hays</li>
+<h4 class="prop" style="margin-top: 50px;">K</h4>
+<li>Georges Krins</li>
+<h4 class="prop" style="margin-top: 50px;">L</h4>
+<li>Joseph Laroche</li>
+<li>René Jacques Lévy</li>
+<h4 class="prop" style="margin-top: 50px;">M</h4>
+<li>Francis Davis Millet</li>
+<li>Harry Markland Molson</li>
+<li>James Paul Moody</li>
+<li>William McMaster Murdoch</li>
+<h4 class="prop" style="margin-top: 50px;">P</h4>
+<li>Jack Phillips</li>
+<h4 class="prop" style="margin-top: 50px;">S</h4>
+<li>Edward Smith</li>
+<li>William Thomas Stead</li>
+<li>Ida Straus</li>
+<li>Isidor Straus</li>
+<h4 class="prop" style="margin-top: 50px;">T</h4>
+<li>John Borland Thayer</li>
+<h4 class="prop" style="margin-top: 50px;">W</h4>
+<li>George Dunton Widener</li>
+<li>Henry Wilde</li>
+<li>Duane Williams</li>
+  
+</ul>
+</p>
