🛀🍛 Checkpoint ./titanic.html:74308084/18:74872078/3949 ./titanic.css:74308084/25

--- a/titanic.html
+++ b/titanic.html
@@ -210,21 +210,14 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
       
 </tr>
 </table>
-     <a href="#titre">début</a>
-  </p>
-  <p>
-    Pour plus de précisions consultez <a href="https://fr.wikipedia.org/wiki/Titanic" class="link">wikipedialien</a>
-  </p>
- </div>
-    </div>
-    </body>
-
-</html>
   
-  
+  </p>
 <h3 class="prop" style="margin-top: 50px;">Liste des personnalités décédées lors du naufrage</h3>
   <p>
-<ul>
+    
+<ul class="truc">
+<tr>
+		<td>  
 <h4 class="prop" style="margin-top: 50px;">A</h4>
 <li>Famille Allison</li>
 <li>Thomas Andrews</li>
@@ -246,6 +239,10 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
 <li>Charles Melville Hays</li>
 <h4 class="prop" style="margin-top: 50px;">K</h4>
 <li>Georges Krins</li>
+  </td>
+</tr>
+<tr>
+		<td>   
 <h4 class="prop" style="margin-top: 50px;">L</h4>
 <li>Joseph Laroche</li>
 <li>René Jacques Lévy</li>
@@ -267,6 +264,23 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
 <li>George Dunton Widener</li>
 <li>Henry Wilde</li>
 <li>Duane Williams</li>
+
   
 </ul>
 </p>
+  <p>
+    Pour plus de précisions consultez <a href="https://fr.wikipedia.org/wiki/Titanic" class="link">wikipedialien</a>
+  </p>
+ </div>
+    </div>
+    </body>
+
+</html>
+  
+  
+<tr>
+		<td>   </td>
+</tr>
+  <tr>	
+    <td>  </td>
+  </tr>
