🐈🍉 Checkpoint ./titanic.html:74872078/53

--- a/titanic.html
+++ b/titanic.html
@@ -214,7 +214,7 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
   </p>
 <h3 class="prop" style="margin-top: 50px;">Liste des personnalités décédées lors du naufrage</h3>
   <p>
-<table>
+<table border="1">  
 <ul class="truc">
 <tr>
 		<td><h4 class="prop" style="margin-top: 50px;">A</h4></td>
