--- a/index.html
+++ b/index.html
@@ -123,20 +123,20 @@
 
   
   
-  
-  <h3 id="credit">Crédits</h3>
-  <center><table>  
+<center><div class="T1">
+  <h3 id="credit">Crédits</h3><br/>
+  <table>  
     <tr>
-		<td><p><u>Site crée par :</u></p></td><td><h3 id="source">Sources</h3></td>
-    </tr>
-    <tr>
+      <thead><p><u>Site crée par :</u></p></thead>
 		<td>
       <p>Nicola Pinto Ramos</p>
       <p>Adrien Rognier</p>
       <p>Jacques De Lapisse</p></td>
     </tr>
+    </table>
+    <table>
     <tr>
-		  
+      <thead><h3 id="source">Sources</h3></thead>
 		  <td><p><a class="credit" href="https://fr.wikipedia.org/wiki/Titanic">Le Titanic</a></p>
       <p><a class="credit" href="">Le Britanique</a></p>
       <p><a class="credit" href="">L'olympique</a></p>
@@ -144,8 +144,8 @@
       <p><a class="credit" href="https://fr.wikipedia.org/wiki/Accident_du_submersible_Titan">Le Titan</a></p></td>
 		    
     </tr>
-	
-    </table></center>
+    </table>
+  </div></center>
 </footer>
 
 </body>
