👳🌑 Checkpoint ./index.html:74308084/88

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
     
 
   
+  <h3 id="credit">Crédits</h3>
+<div class="T1">
   
-<center><div class="T1">
-  <h3 id="credit">Crédits</h3><br/>
   <table>  
     <tr>
       <thead><p><u>Site crée par :</u></p></thead>
@@ -145,7 +145,7 @@
 		    
     </tr>
     </table>
-  </div></center>
+  </div>
 </footer>
 
 </body>
