add mausolee section

--- a/titanic.html
+++ b/titanic.html
@@ -32,6 +32,9 @@
             <div class="lien">
               <a href="#chiffres">Les chiffres</a>
             </div>
+            <div class="lien">
+              <a href="#mausolee">Mausolée</a>
+            </div>
         </div>
       </div>
       <div class="container-body">
@@ -212,6 +215,9 @@ Le 25 mars, le capitaine Herbert Haddock est le premier à prendre le commandeme
 </table>
   
   </p>
+<div class="section" id="mausolee">
+<h2>Mausolée</h2>
+</div>
 <h3 class="prop" style="margin-top: 50px;">Liste des personnalités décédées lors du naufrage</h3>
   <p>
 <table border="1">  
